--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://livv.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: 人生短短数十载
+subtitle: 本该淡淡然
+author: vvlee
 simple_search: https://www.google.com/search
 description:
 
@@ -51,7 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, asides/qqemail.html, asides/weibo.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -63,8 +63,24 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 #   3rd Party Settings    #
 # ----------------------- #
 
+# ----------------------- #
+#    Categories           #
+# ----------------------- #
+# create categories page
+category_list: true
+# use counter after categories
+category_counter: true
+# category title
+category_title: 分類
+# create an include categories list in @source/_includes/asides/categories_sidebar.html
+# and don't forget to add 'asides/categories_sidebar.html' into @default_asides if you want to enable it.
+category_sidebar: true
+# create an include categories tag cloud page in @source/_includes/asides/categories_tag.html
+# and don't forget to add 'asides/categories_tag.html' to @default_asides if you want to enable it.
+category_tag_cloud: true
+
 # Github repositories
-github_user:
+github_user: livv
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -91,7 +107,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: vvblog
 disqus_show_comment_count: false
 
 # Google Analytics
@@ -99,3 +115,16 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+# weibo
+# Please refer to http://weibo.com/tool/weiboshow to get your uid and verifier. 
+weibo_uid: 2099590271
+weibo_verifier: c77742aa # 填入verifier  
+weibo_fansline: 0        # 粉丝显示多少行  
+weibo_show: true         # 是否显示最近微博内容  
+weibo_pic: true          # 是否显示微博中的图片  
+weibo_skin: 10           # 使用哪种配色风格，数字为从1开始的微博秀风格序号 
+weibo_share: true
+
+# qq email
+qq_email: aR8fGgEIDQYeKR8AGUcYGEcKBgQ
