--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ category_sidebar: true
 category_tag_cloud: true
 
 # Github repositories
-github_user: livv
+github_user: vvlvv
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
